tests/errors/nonconst_def.pyx
import os
DEF ospath = os.path

_ERRORS = u"""
2:15: Compile-time name 'os' not defined
2:15: Error in compile-time expression: AttributeError: 'NoneType' object has no attribute 'path'
"""
